<resources>
    <string name="app_name">CS3270A7 Egbert</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="end_hint">End At</string>
    <string name="start_hint">Start At</string>
    <string name="course_code_hint">Course Code</string>
    <string name="course_name_hint">Course Name</string>
    <string name="course_number_hint">Course Number</string>
</resources>